<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:id="@+id/loginForm"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="10dp"
        android:padding="20dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="Best guitar player ever"
            android:src="@drawable/mustaine_logo_haha"
            android:layout_margin="40dp"/>

        <EditText
            android:id="@+id/indefiredEdit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/border_rect"
            android:hint="@string/hint_username"
            android:paddingLeft="10dp"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/passwordEdit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/hint_password"
            android:paddingLeft="10dp"
            android:inputType="textPassword"
            android:background="@drawable/border_rect"
            android:layout_marginBottom="20dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/logInBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/login_btn"
            android:text="@string/login_btn_text"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_marginBottom="20dp">
        </androidx.appcompat.widget.AppCompatButton>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/tvText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="18sp"
                android:text="OR"
                android:textColor="@color/dark_gray"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/tvText"
                android:background="@color/light_gray"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/tvText"
                android:background="@color/light_gray"
                />

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/login_btn"
            android:text="@string/login_with_github"
            android:drawableStart="@drawable/ic_github_logo"
            android:paddingLeft="90dp"
            android:gravity="center|left"
            android:drawablePadding="8dp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_marginBottom="20dp">
        </androidx.appcompat.widget.AppCompatButton>

        <TextView
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/forgot_password" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85"/>

    <LinearLayout
        android:id="@+id/registred"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_an_acc" />

        <TextView
            android:id="@+id/refToSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:clickable="true"
            android:text="@string/goto_reg_form_ref"
            android:textColor="@color/link_color"
            android:textStyle="bold" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>